client/app/styles/main.css
body {
  padding-top: 40px;
}
a {
    cursor: pointer
}
a:hover {
    text-decoration: none
}

.fade-out {
    opacity: 0.5;
}
.link-pointer {
    cursor: default;
}
.board {
    margin-top: 20px;
}
div.error {
    margin: 20px;
    padding: 10px;
    border: 1px solid #9f0404;
    background-color: #e5a7a7;
    border-radius: 5px;
}

.story-card {
	background-color: #FFFFE6;
	-moz-border-radius: 4px;
	border-radius: 4px;
	padding: 4px 6px 4px 6px;
	border: solid 1px #E6E6B8;
	margin-bottom: 10px;
    display: block;
}
.story-card div.story-center:after{
    clear: both;
    content: "";
    display: block;
}
.story-card div.footer, .story-card div.header {
    text-align: left;
}

.story-card:hover {
	background-color: #FFFFCC;
	border: solid 3px #b5b59f;
	padding: 2px 4px 2px 4px;
}

.task-card {
	background-color: #E0E0F8;
	-moz-border-radius: 4px;
	border-radius: 4px;
	padding: 4px 6px 4px 6px;
	border: solid 1px #A9A9F5;
	margin-bottom: 10px;
}

.task-card:hover {
	background-color: #d4d4ef;
	border: solid 3px #9292a7;
	padding: 2px 4px 2px 4px;
    cursor: pointer
}

.centered {
	text-align: center;
}

.story-number {
	font-weight: bold;
	font-size: 1.5em;
	margin-top: 0.8em;
	margin-bottom: 0.3em;
}

.story-title {
	font-size: 1.5em;
	margin-top: 0.3em;
	margin-bottom: 0.8em;
}

.information-text {
	font-style: italic;
    color: grey;
	margin-top: 0.3em;
	margin-bottom: 0.8em;
}

.story-owner-image {
	margin: 0.8em 0.8em 0.8em 0.8em;
	width: 80px;
    min-height: 80px;
    float: left;
    vertical-align: middle;
    display: inline-block;
    text-align: center;
	border-radius: 4px;
	border: solid 1px grey;
    background-image: url("../images/team/unknown.jpg");
    background-size: contain;
}

.story-owner-image img, .story-owner-image object {
    width: 100%;
}

.space-bottom {
	margin-bottom: 1em;
}

.block {
    width: 100%;
    margin: 0px;
    display: inline-block;
    vertical-align: top;
}
.block-fullsize {
    margin-bottom: 30px;
}

.link {
    cursor: pointer;
    color: #428bca;
}
@media (max-width: 1500px) and (min-width: 992px) {
    .swimlane {
        width: 33%;
    }
}

@media (min-height: 500px) {
    .swimlane {
        height: 400px;
    }
}

@media (min-height: 800px) {
    .swimlane {
        height: 700px;
    }
}
.swimlane.drag-area-entered {
    border-radius: 15px;
    border: solid 1px #d6d6d6;
    background-color: #ebebeb;
}

@media (min-width: 1500px) {
    .block {
        width: 49%;
    }
}

.story-with-postits {
    margin-bottom: 25px;
}
.story-card.compact-mode .centered {
    margin-bottom: 25px;
}
.postits {
    position: relative;
    left: 50px;
    top: -20px;
}
.compact-mode .postits {
    left: 110px;
}
.postit {
    border-radius: 2px;
    border: solid 1px grey;
    background-color: #ff60df;
    color: white;
    font: "Comic Sans MS";
    font-size: 0.8em;
    font-weight: bold;
    padding: 10px 5px 10px 5px;
    width: 75px;
    height: 35px;
    vertical-align: middle;
    text-align: center;
    float: left;
    box-shadow: 5px 5px 2px #888888;
    margin-right: 10px;
}
.row {
    margin: 0px;
}
.slice {
    margin: 5px;
    padding: 0px 5px 0px 5px;
    border-radius: 15px;
    border: solid 1px #d6d6d6;
}

